--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 [dependencies]
 anyhow = "1"
 console = "0.14.1"
+hdrhistogram = "7.3.0"
 regex = "1.5"
 rayon = "1.5.1"
 structopt = "0.3"
